# PollingConditions

./: CMakeLists.txt  README.md
src/: pollingconditions.h  predefinedpollingconditions.h
test/: pollingconditionstests.cpp
